DEPS, MAINT, UPD, DOC, TEST: cumulative QOL commit
* agent: add docstrings;
* alignment: add annotations, docstrings, reformat code;
* annotation: fix docstrings, reformat code;
* collection: fix formatting, docstrings, new aggregation methods;
* data: fix formatting, refresh docstrings, add annotations, add new code for data copy;
* engine: fix formatting, add annotations, fix docstrings;
* event: fix formatting, drop deprecated methods, fix docstrings;
* exception: add annotations, fix formatting;
*matching: add abstract class, add annotations, drop preliminary population sorting, fix formatting, change score output to primitive double;
* reflection: add abstract class, consolidate code, fix docstrings,  add annotations, fix formatting;
* space: add annotations, fix formatting, fix docstrings, add minor code adjustments,  replace math functions with accurate versions;
* statistics: fix formatting, fix docstrings, add annotations, consolidate code,  replace math functions with accurate versions;
* tests: add new tests;
* deps: bump versions, fix pom file.