@@ -42,13 +42,19 @@
                 <configuration> <!-- Compile JAVA 18 compatible bytecode -->
                     <source>18</source>
                     <target>18</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <compilerArgs>
+                        <arg>--add-modules=jdk.incubator.vector</arg>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M7</version>
+                <configuration>
+                    <argLine>@{argLine} --add-modules=jdk.incubator.vector</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -97,10 +103,9 @@
     </build>
     <dependencies>
         <dependency>
-            <groupId>org.uog</groupId>
+            <groupId>com.github.MRC-CSO-SPHSU</groupId>
             <artifactId>jamjam</artifactId>
-            <version>0.0.1</version>
-            <scope>compile</scope>
+            <version>161d9c0</version>
         </dependency>
         <dependency>
             <groupId>io.github.hakky54</groupId>
@@ -121,18 +126,18 @@
         <dependency>
             <groupId>org.hibernate.orm</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>6.1.2.Final</version> <!-- JPA 3.0-->
+            <version>6.1.3.Final</version> <!-- JPA 3.0-->
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>4.7.0</version>
+            <version>4.8.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>4.7.0</version>
+            <version>4.8.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
